overflow fixed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  z-index: 10;
   height: 100vh;
   box-sizing: border-box;
   background-color: $Color-blue;
